Fixed extra white space bug

--- a/src/styles/new-home.scss
+++ b/src/styles/new-home.scss
@@ -32,6 +32,17 @@
 
 // Main block of styles
 
+// * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+// }
+
+// html, body {
+//   width: 100%;
+//   height: 100%;
+// }
+
 .main-div {
   background: linear-gradient(270deg, #b0f3e1, #ffffff, #fce1ff, #ffffff, #c4ffff, #ffffff);
   background-size: 800% 800%;
@@ -43,7 +54,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
 }
 
